--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
-version: '3'
+version: '3.8'
 
 services:
-  app:
+  web:
     build: .
     command: sh -c 'uvicorn app.main:app --reload --port=8000 --host=0.0.0.0'
     ports:
@@ -13,12 +13,14 @@ services:
     links:
       - mongo
     networks:
-      - app-network
+      - web-network
 
   mongo:
     image: mongo
     ports:
       - 27017:27017
+    networks:
+      - web-network
 
 networks:
-  app-network:
+  web-network:
