--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pydantic==2.7.0
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.18.1
+pymongo==4.7.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytoolconfig==1.3.1
